--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -63,47 +63,38 @@ scrolling:
   multiplier: 3
 
 # Font configuration (changes require restart)
-# font:
-#   # The normal (roman) font face to use.
-#   # Style can be specified to pick a specific face.
-#   normal:
-#     family: Iosevka
-#     style: Light
-#     # family: "Fira Code"
-#     # family: "Source Code Pro"
-#     # style: Retina
+font:
+  # The normal (roman) font face to use.
+  # Style can be specified to pick a specific face.
+  normal:
+    family: "Fira Code"
+    style: Retina
 
-#   # The bold font face
-#   bold:
-#     family: Iosevka
-#     style: Medium
-#     # family: "Fira Code"
-#     # family: "Source Code Pro"
+  # The bold font face
+  bold:
+    family: "Fira Code"
+    style: SemiBold
 
-#   # The italic font face
-#   italic:
-#     family: Iosevka
-#     style: "Light Italic"
-#     # style: "Light Oblique"
-#     # family: "Fira Code"
-#     # family: "Source Code Pro"
-#     # style: "Medium Italic"
+  # The italic font face
+  italic:
+    family: "Fira Code"
+    style: "Medium Italic"
 
-#   # Point size of the font
-#   size: 14.0
+  # Point size of the font
+  size: 12.0
 
-#   # Offset is the extra space around each character. offset.y can be thought of
-#   # as modifying the linespacing, and offset.x as modifying the letter spacing.
-#   offset:
-#     x: 0
-#     y: 0
+  # Offset is the extra space around each character. offset.y can be thought of
+  # as modifying the linespacing, and offset.x as modifying the letter spacing.
+  offset:
+    x: 0
+    y: 0
 
-#   # Glyph offset determines the locations of the glyphs within their cells with
-#   # the default being at the bottom. Increase the x offset to move the glyph to
-#   # the right, increase the y offset to move the glyph upward.
-#   glyph_offset:
-#     x: 0
-#     y: 0
+  # Glyph offset determines the locations of the glyphs within their cells with
+  # the default being at the bottom. Increase the x offset to move the glyph to
+  # the right, increase the y offset to move the glyph upward.
+  glyph_offset:
+    x: 0
+    y: 0
 
 #   # Thin stroke font rendering (macOS only)
 #   #
