--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -3,7 +3,7 @@
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
 # set by alacritty it self.
-# env:
+#env:
   # TERM env customization.
   #
   # If this property is not set, alacritty will set it to xterm-256color.
@@ -11,7 +11,7 @@
   # Note that some xterm terminfo databases don't declare support for italics.
   # You can verify this by checking for the presence of `smso` and `sitm` in
   # `infocmp xterm-256color`.
-  # TERM: xterm-256color-italic
+  #  TERM: xterm-256color
 
 window:
   # Window dimensions (changes require restart)
@@ -20,7 +20,7 @@ window:
   # setting is ignored.
   dimensions:
     columns: 100
-    lines: 45
+    lines: 55
 
   # Window padding (changes require restart)
   #
@@ -52,6 +52,9 @@ window:
   # Values for `startup_mode` (macOS only):
   #   - SimpleFullscreen
   startup_mode: Windowed
+
+  # Set background opacity
+  opacity: 0.9
 
 scrolling:
   # maximum number of lines in the scrollback buffer. Specifying '0' will
@@ -231,9 +234,6 @@ bell:
   animation: EaseOutExpo
   color: '0xffffff'
   duration: 0
-
-# Background opacity
-background_opacity: 0.9
 
 # Key bindings
 #
