--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -474,6 +474,7 @@ live_config_reload: true
 # Entries in shell.args are passed unmodified as arguments to the shell.
 shell:
   program: /usr/bin/fish
+  #/home/fl4mbx/.cargo/bin/zellij
   args:
     - --command=tmux
 
