--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,11 @@ set-option -g default-terminal "xterm-256color"
 # Copy, see https://www.seanh.cc/2020/12/27/copy-and-paste-in-tmux/
 set -g mouse on
 
+# Set copy on wayland
+# We tmux >= 3.2
+%if #{>=:#{version},3.2}
+set -s copy-command 'wl-copy'
+%else
 # These bindings are for X Windows only. If you're using a different
 # window system you have to replace the `xsel` commands with something
 # else. See https://github.com/tmux/tmux/wiki/Clipboard#available-tools
@@ -21,8 +26,7 @@ bind -T copy-mode    TripleClick1Pane select-pane \; send -X select-line \; send
 bind -T copy-mode-vi TripleClick1Pane select-pane \; send -X select-line \; send -X copy-pipe-no-clear "wl-copy"
 bind -n TripleClick1Pane select-pane \; copy-mode -M \; send -X select-line \; send -X copy-pipe-no-clear "wl-copy"
 bind -n MouseDown2Pane run "tmux set-buffer -b primary_selection \"$(wl-paste -n)\"; tmux paste-buffer -b primary_selection; tmux delete-buffer -b primary_selection"
-
-
+%endif
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
@@ -247,10 +251,10 @@ set-option -g history-limit 10000
 
 ## Local overrides
 
-if-shell "[[ -f ~/.tmux.local.conf ]]" "source ~/.tmux.local.conf"
-
 set -g default-command /usr/bin/fish
 set -g default-shell /usr/bin/fish
+
+if-shell "[[ -f ~/.tmux.local.conf ]]" "source ~/.tmux.local.conf"
 
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
