better copy/paste with tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,6 +28,10 @@ bind -n TripleClick1Pane select-pane \; copy-mode -M \; send -X select-line \; s
 bind -n MouseDown2Pane run "tmux set-buffer -b primary_selection \"$(wl-paste -n)\"; tmux paste-buffer -b primary_selection; tmux delete-buffer -b primary_selection"
 %endif
 
+# nested copy
+# see https://stackoverflow.com/questions/60923257/tmux-how-to-copy-text-between-nested-remote-ssh-session-and-local-machine
+set -g set-clipboard on
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @yank_action 'copy-pipe-no-clear'
