Update .tmux.conf to work properly with fish on macos

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -244,8 +244,8 @@ set-option -g history-limit 10000
 
 ## Local overrides
 
-set -g default-command /usr/bin/fish
-set -g default-shell /usr/bin/fish
+set-option -g default-command $SHELL
+set-option -g default-shell $SHELL
 
 if-shell "[[ -f ~/.tmux.local.conf ]]" "source ~/.tmux.local.conf"
 
