--- a/.tmux.conf
+++ b/.tmux.conf
@@ -247,7 +247,7 @@ set-option -g history-limit 10000
 set-option -g default-command $SHELL
 set-option -g default-shell $SHELL
 
-if-shell "[[ -f ~/.tmux.local.conf ]]" "source ~/.tmux.local.conf"
+if-shell "test -e ~/.tmux.local.conf" "source-file ~/.tmux.local.conf"
 
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
